flux/monitoring/grafana/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: grafana
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: "3000"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: "3000"
        protocol: TCP
  egress:
  #- toEntities:
  #  - world
  - toEntities:
    - kube-apiserver
  - toEndpoints:
    - matchLabels:
        k8s-app: kube-dns
    #toPorts:
    #- ports:
    #  - port: "53"
    #    protocol: ANY
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: "9090"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app: postgres
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app: loki
    toPorts:
    - ports:
      - port: "3100"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app: tempo
    toPorts:
    - ports:
      - port: "3200"
        protocol: TCP
